--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
     <div class="container">
         <header>
             <div class="header-content">
-                <h1>あみだくじ</h1>
+                <h1>まこのあみだくじ</h1>
             </div>
         </header>
 
